@@ -35,6 +35,7 @@ if($_POST['payment0']=='yes'){
 			if(!array_key_exists($sid,$Students)){
 				$Student=(array)fetchStudent_short($sid);
 				$guardians=(array)list_student_payees($sid);
+				/* TODO: Check the guardians preferred payment method... if it is by bank??? */
 				if(sizeof($guardians)>0 and $guardians[0]['paymenttype']!='1'){
 					/* Only add the student record if their is a valid payee account. */
 					$Student['payee']=$guardians[0];
